# specql

./: .bandit  .env.test.example  .gitignore  .pre-commit-config.yaml  ACTION_LIBRARY_RESTORATION_SUMMARY.md  AGENT_INSTRUCTIONS.md  ALPHA_RELEASE_CHECKLIST.md  ALPHA_RELEASE_IMPLEMENTATION_PLAN.md  ALPHA_RELEASE_POSTMORTEM.md  ALPHA_RELEASE_TODO_CLEANUP_PLAN.md  ALPHA_RELEASE_WEEKLY_SUMMARY.md  ANALYSIS_v0.5.0_BETA.md  BROKEN_LINKS_REPORT.md  CHANGELOG.md  CI_FIX_PLAN.md  CODEBASE_INTERVIEW.md  COMPLETION_SUMMARY.md  CONTENT_TRIAGE.md  CONTRIBUTING.md  COVERAGE_GAPS.md  DOCUMENTATION_IMPROVEMENTS_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_PROGRESS_REPORT.md  FRAISEQL_INTEGRATION_VERIFIED.md  GETTING_STARTED.md  GITHUB_ISSUE_CREATED.md  GUIDES_README.md  GUIDES_SUMMARY.md  HANDOFF_FINAL_2_TESTS.md  IMPLEMENTATION_PLAN_PROMPT.md  INFORMATION_ARCHITECTURE.md  JUNIOR_GUIDES_INDEX.md  LICENSE  LOGGING_INTEGRATION_TODO.md  MULTI_FRAMEWORK_EVOLUTION_PLAN.md  Makefile  PATTERN_FIX_CHEATSHEET.md  PATTERN_TESTS_PROGRESS.md  PHASED_IMPLEMENTATION_PLAN.md  POST_BETA_PHASED_PLAN.md  (+88 more)
.claude/: CLAUDE.md
.claude/prompts/: README.md  team_d_auth_context.md  team_e_auth_context.md
.github/: AI_CLEANUP_PROMPT.md  CI_CD_DOCUMENTATION.md  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  VERSIONING_QUICK_REF.md  dependabot.yml  labeler.yml  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  environments.yml  labeler.yml  publish.yml  quality-gate.yml  release.yml  stale.yml  tests.yml  validate-entities.yml  version-check.yml
archive/legacy-docs/: CLEANUP_AND_ENHANCEMENT_PLAN.md  CLI_PATTERN_DETECTION.md  COMPLEX_BUSINESS_LOGIC_YAML_ANALYSIS.md  FRAMEWORK_INTEGRATION.md  PROJECT_STATUS.md  README.md  RUST_FRAMEWORK_SUPPORT.md  RUST_ORM_SUPPORT.md  SEAORM_SUPPORT.md  SKIPPED_TESTS_SUMMARY.md  TEMPLATING_SYSTEM_ANALYSIS.md  TREE_SITTER_FIX_SUMMARY.md  TREE_SITTER_INTEGRATION.md  table_code_parser_fix_plan.md
archive/sqlite_databases/: README.md  pattern_library.db
backup_markdown_20251114_094729/: GETTING_STARTED.md  PRINTOPTIM_MIGRATION_AGENT_PROMPT.md  PRINTOPTIM_MIGRATION_DETAILED_PLAN.md  PRINTOPTIM_REVERSE_ENGINEERING_AGENT_PROMPT.md  README.md
backup_markdown_20251114_094729/.github/: PRE_PUBLIC_CLEANUP.md  README_CLEANUP.md
cli/: confiture_extensions.py  detect_patterns.py  docs.py  generate.py  language_detector.py  main.py  orchestrator.py  reverse.py  reverse_python.py  reverse_rust.py  reverse_schema.py  reverse_typescript.py  validate.py
cli_old/: cache_commands.py  diff.py  generate.py  incremental_tracker.py  reverse_common.py  reverse_java.py  reverse_typescript.py  validate.py
config/: fraiseql.yaml
content-gems/: rich-types-overview.md  trinity-pattern-explanation.md  value-proposition.md
core/: README.md  ast_models.py  dependencies.py  project_config.py  scalar_types.py  specql_parser.py
docs/: ARCHITECTURE.md  CLI_ALIGNMENT_PLAN.md  CLI_PATTERN_DETECTION.md  CLI_REDESIGN_PLAN.md  DATABASE_TESTING.md  DATABASE_TESTS_SOLUTION.md  DEPRECATED_FEATURES.md  FRAMEWORK_INTEGRATION.md  INDEX.md  INDEX_NAMING_CONVENTION_FIX_PLAN.md  INTERMEDIATE_VIEWS_ANALYSIS.md  JAVA_SETUP.md  MULTI_LANGUAGE_REVERSE_ENGINEERING_PLAN.md  PRISMA_TREE_SITTER_MIGRATION.md  PROJECT_STATUS.md  PYTHON_3.13_SETUP.md  QUICK_REFERENCE.md  README.md  REMAINING_TESTS_FIX_PLAN.md  ROADMAP.md  RUST_FRAMEWORK_SUPPORT.md  RUST_ORM_SUPPORT.md  SEAORM_SUPPORT.md  SPECQL_TABLE_VIEWS_QUICK_REFERENCE.md  TEST_FIX_QUICK_START.md  TICKET_REMOVE_FRAISEQL_ANNOTATIONS_FROM_CORE_FUNCTIONS.md  TREE_SITTER_INTEGRATION.md  TREE_SITTER_MIGRATION.md  TYPESCRIPT_PRISMA_GUIDE.md  VERSIONING.md  WHY_SPECQL.md  getting_started.md  link-fixes-manifest.md  schema.dot  spring_boot_pattern_recognition.md
entities/: post.yaml  user.yaml
examples/: rust_integration_examples.py
generators/: app_schema_generator.py  app_wrapper_generator.py  comment_generator.py  composite_type_generator.py  constraint_generator.py  core_logic_generator.py  foundation_generator.py  function_generator.py  index_generator.py  schema_orchestrator.py  table_generator.py  trinity_helper_generator.py
infrastructure/: __init__.py  pattern_detector.py  pattern_repository.py  security_pattern_library.py
migrations/: 000_app_foundation.sql  001_schema.sql  100_contact.sql  test_metadata_functions.sql  test_metadata_schema.sql
numbering/: README.md  manifest_generator.py
printoptim_migration/: README.md
registry/: domain_registry.yaml
reverse_engineering/: __init__.py  aggregate_filter_parser.py  ai_enhancer.py  algorithmic_parser.py  ast_to_specql_mapper.py  audit_detector.py  control_flow_parser.py  cte_parser.py  cursor_operations_parser.py  dynamic_sql_parser.py  entity_generator.py  exception_handler_parser.py  fk_detector.py  heuristic_enhancer.py  info_instance_detector.py  java_action_parser.py  metrics_dashboard.py  parser_coordinator.py  pattern_orchestrator.py  prisma_parser.py  python_action_parser.py  python_ast_parser.py  python_to_specql_mapper.py  route_to_specql_converter.py  rust_action_parser.py  rust_parser.py  sql_ast_parser.py  sql_type_mapper.py  table_parser.py  translation_detector.py  tree_sitter_compat.py  tree_sitter_prisma_parser.py  tree_sitter_rust_parser.py  tree_sitter_typescript_parser.py  trinity_detector.py  typescript_parser.py  universal_action_mapper.py  universal_ast_mapper.py  universal_pattern_detector.py  window_function_parser.py
scripts/: backfill_pattern_embeddings.py  benchmark_fraiseql_vs_custom.py  benchmark_pattern_library.py  install_tree_sitter_py313.sh  migrate_patterns_to_postgresql.py  test_summary.py  validate_docs.py  version.py  version_manager.py
site/: 404.html  index.html  search.html
src/: __version__.py
stdlib/: CHANGELOG.md  CONTRIBUTING.md  README.md  validate_rich_types.py
stubs/: json_log_formatter.pyi
templates/: template-concept.md  template-guide.md  template-reference.md
tests/: README.md  conftest.py
utils/: __init__.py  logger.py
(+2670 files in other folders)
