[project]
name = "specql-generator"
version = "0.4.0-alpha"
description = "SpecQL schema generator"
authors = [{name = "Lionel Hamayon", email = "lionel.hamayon@evolution-digitale.fr"}]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1.2",
    "click>=8.1.0",
    "rich>=13.0.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary]>=3.1.0",
    "fraiseql-confiture>=0.3.0",
    "networkx>=3.0",
    "httpx>=0.25.0",
    "docker>=7.0.0",
    "pglast>=6.0",
    "pgvector>=0.2.0",
    "sentence-transformers>=5.1.2",
    "numpy>=1.24.0",
    "textual>=6.6.0",
    "pygments>=2.19.2",
    "watchdog>=6.0.0",
    "graphviz>=0.21",
    "python-hcl2>=7.3.1",
    "py4j>=0.10.9",
    "fraiseql>=0.5.3",
]

[project.optional-dependencies]
patterns = [
    "psycopg[binary]>=3.1.0",      # PostgreSQL driver
    "pgvector>=0.2.0",              # pgvector integration
    "sentence-transformers>=2.2.0", # Embeddings (CPU-friendly)
    "numpy>=1.24.0",                # Math operations
    "rich>=13.0.0",                 # CLI formatting
]

dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-faker>=2.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]

# Java reverse engineering requires JDK 11+ and Eclipse JDT
# See docs/JAVA_SETUP.md for installation instructions
java = [
    "py4j>=0.10.9",  # Already in main dependencies
]

[project.scripts]
specql = "src.cli.confiture_extensions:specql"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "psutil>=7.1.3",
    "pytest-benchmark>=5.2.3",
]
