[project]
name = "specql-generator"
version = "0.5.0-beta"
description = "Multi-language backend code generator from YAML specifications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lionel Hamayon", email = "lionel.hamayon@evolution-digitale.fr"}
]
keywords = [
    "postgresql",
    "code-generation",
    "backend",
    "multi-language",
    "java",
    "rust",
    "typescript",
    "python",
    "spring-boot",
    "diesel",
    "prisma",
    "graphql",
    "fraiseql",
    "orm",
    "database",
    "schema-generator",
    "reverse-engineering",
    "yaml",
    "plpgsql",
    "low-code",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
    "Programming Language :: Java",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    # Core dependencies (essential for basic code generation)
    "pyyaml>=6.0",           # YAML parsing
    "jinja2>=3.1.2",         # Template engine
    "click>=8.1.0",          # CLI framework
    "rich>=13.0.0",          # Terminal formatting
    "psycopg[binary]>=3.1.0", # PostgreSQL driver
    "fraiseql-confiture>=0.3.0", # Configuration
    "fraiseql>=0.5.3",       # Core library
    "httpx>=0.25.0",         # HTTP client (for runners & embeddings)
    "pglast>=6.0",           # SQL parsing
]

[project.urls]
Homepage = "https://github.com/fraiseql/specql"
Repository = "https://github.com/fraiseql/specql"
Documentation = "https://github.com/fraiseql/specql/blob/main/docs/00_getting_started/README.md"
"Bug Tracker" = "https://github.com/fraiseql/specql/issues"
Changelog = "https://github.com/fraiseql/specql/blob/main/CHANGELOG.md"
"Getting Started" = "https://github.com/fraiseql/specql/blob/main/docs/00_getting_started/QUICKSTART.md"

[project.optional-dependencies]
# Diagram generation
diagrams = [
    "networkx>=3.0",     # Dependency graph analysis
    "graphviz>=0.21",    # Graphviz DOT rendering
]

# Pattern embeddings and vector support
patterns = [
    "pgvector>=0.2.0",   # PostgreSQL vector extension
    "numpy>=1.24.0",     # Math operations for embeddings
]

# Interactive TUI interface
interactive = [
    "textual>=6.6.0",    # TUI framework
    "pygments>=2.19.2",  # Syntax highlighting
]

# Infrastructure runners
runners = [
    "docker>=7.0.0",     # Docker container execution
]

# Reverse engineering
reverse = [
    "py4j>=0.10.9",      # Java/JDT bridge (requires JDK 11+)
    "python-hcl2>=7.3.1", # Terraform HCL parsing
]

# Test data generation
testing = [
    "faker>=38.0.0",     # Fake data generation
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-faker>=2.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "numpy>=1.24.0",     # Required by pattern tests
    "graphviz>=0.21",    # Required by diagram tests
]

# All optional features
all = [
    "specql-generator[diagrams,patterns,interactive,runners,reverse,testing]",
]

[project.scripts]
specql = "src.cli.confiture_extensions:specql"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Exclude test files and internal docs from package
[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/backup_internal",
    "/docs/implementation_plans",  # Internal planning
    "/.git",
    "/.gitignore",
    "/.vscode",
    "/.idea",
    "*.pyc",
    "__pycache__",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "psutil>=7.1.3",
    "pytest-benchmark>=5.2.3",
    "twine>=6.2.0",
]
