[project]
name = "specql"
version = "0.8.5"  #     Managed by VERSION file
description = "SpecQL - Business-focused YAML to PostgreSQL + GraphQL code generator"
authors = [
    {name = "Lionel Hamayon", email = "lionel.hamayon@evolution-digitale.fr"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
# Core dependencies - MINIMAL, always installed
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1.2",
    "click>=8.1.0",
    "rich>=13.0.0",
    "psycopg>=3.2.12",
    "fraiseql-confiture>=0.3.2",
    "tree-sitter>=0.25.2",
    "python-hcl2>=7.3.1",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.142.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

# Reverse engineering features
reverse = [
    "pglast>=7.10",  # SQL AST parsing
    "tree-sitter-language-pack>=0.11.0",  # Actively maintained (165+ languages, Python 3.10+, works with 3.13!)
    # Note: The compatibility layer supports automatic fallback with smart prioritization:
    #   Priority 1: Individual packages (most up-to-date grammars, e.g., Prisma v15 vs v13 in language-pack)
    #   Priority 2: tree-sitter-language-pack (actively maintained, 165+ languages, Python 3.13 wheels available)
    #   Priority 3: tree-sitter-languages (legacy, unmaintained, Python < 3.13 only)
    # Simply install any of these and the compatibility layer will use the best available option.
]

# Infrastructure deployment features
infrastructure = [
    "python-hcl2>=4.3.0",  # Terraform HCL parsing
]

# Test data generation
testing = [
    "faker>=37.12.0",
]

# Convenience: all optional features
all = [
    "specql[dev,reverse,infrastructure,testing]",
]

[project.scripts]
specql = "cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
pythonpath = ["src"]
# Exclude archived/deprecated tests
norecursedirs = ["archived", "archived_legacy_cli", ".git", "__pycache__"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, requires DB)",
    "benchmark: Performance benchmarks",
    "database: marks tests as requiring database (deselect with '-m \"not database\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
# Java bridge: method names intentionally match Java camelCase conventions
"reverse_engineering/java/jdt_bridge.py" = ["N802", "N806"]
"src/reverse_engineering/java/jdt_bridge.py" = ["N802", "N806"]
# Metadata generator: GENERATOR_MAP follows SQL naming
"testing/metadata/metadata_generator.py" = ["N806"]
"src/testing/metadata/metadata_generator.py" = ["N806"]
# Field generators: Faker follows library convention
"testing/seed/field_generators.py" = ["N806"]
"src/testing/seed/field_generators.py" = ["N806"]
# Test files: allow bare except, star imports, late imports, naming, undefined names (fixtures)
"tests/**/*.py" = ["E402", "E722", "E741", "F403", "F405", "F811", "F821", "N806"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.setuptools.packages.find]
where = ["src"]
include = ["cli*"]

# No workspace members - all dependencies from PyPI

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
